<resources>
    <string name="app_name">My Jepara</string>
    <string name="place_name">Nama Tempat</string>
    <string name="location">Lokasi</string>
    <string name="description">Deskripsi</string>
    <string name="facilities">Fasilitas</string>
    <string name="highlight">Sorotan</string>
    <string name="share">Bagikan</string>
    <string name="detail_tour">Detail Wisata</string>
    <string name="back">Kembali</string>
    <string name="about_me">Tentang Saya</string>
    <string name="profile_image">Foto Profil</string>
    <string name="user_name">Salma Apriliamatul Fitri</string>
    <string name="user_npm">3622110003</string>
    <string name="user_prodi">Sistem dan Teknologi Informasi</string>
    <string name="user_faculty">SAINTEK</string>
    <string name="user_campus">UNIVERSITAS IVET SEMARANG</string>
    <string-array name="data_name">
        <item>Air Terjun Songgo Langit</item>
        <item>Jepara Ourland Park</item>
        <item>Banyu Anjlok</item>
        <item>Bukit Bejagan</item>
        <item>Hutan Sreni</item>
        <item>Benteng Portugis</item>
        <item>Pantai Kartini</item>
        <item>Pantai Bandengan</item>
        <item>Museum Kartini</item>
        <item>Karimunjawa</item>
    </string-array>
    <string-array name="data_location">
        <item>Desa Bucu, Kecamatan Kembang, Jepara</item>
        <item>Pantai Mororejo, Jepara</item>
        <item>Desa Clering, Kecamatan Donorojo</item>
        <item>Desa Tempur, Kecamatan Keling</item>
        <item>Desa Bategede, Kecamatan Nalumsari</item>
        <item>Kecamatan Donorojo, Jepara</item>
        <item>2,5 km dari pusat kota Jepara</item>
        <item>7 km dari pusat kota Jepara</item>
        <item>Pusat kota Jepara</item>
        <item>Laut Jawa, 80 km di utara Jepara</item>
    </string-array>
</resources>