<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:layout_gravity="center"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:paddingBottom="30dp"
            android:background="@drawable/rounded_shape"
            android:clipToOutline="true"
            tools:src="@drawable/karimunjawa"
            tools:ignore="UnusedAttribute" />

        <TextView
            style="@style/TextContent.TitleMedium"
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/place_name" />

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/location" />
        <TextView
            style="@style/TextContent.TitleLarge.Bold"
            android:id="@+id/tv_sorotan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/highlight"
            android:textColor="@color/orange"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>